Sun Jun 27 12:50:12 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/Config_Handlers/HUDisplay/Deployment.xsd:
        * DnC/tests/Config_Handlers/HUDisplay/XMI.xsd:

          Checked in the schema files into the repository to assist
          unit and integration testing.

Sun Jun 27 12:20:23 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/Config_Handlers/RobotAssembly/DeploymentPlan.cdp:

          Updated the plan descriptor to use just two nodes rather
          than five.

Sun Jun 27 11:56:55 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc:

	  Fixed compile errors in our daily builds.

Fri Jun 25 23:59:00 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* Process_Element.cpp
	* Process_Element.h
	* Process_Element.i
	* Process_Element.tpp

          Re-organize the code to avoid sutble potential problems.
          Bala made above changes on my machine.

Fri Jun 25 17:35:00 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/NodeApp_test_client.cpp:

          Fixed compilation problems with VC6.  Varibles defined in for loop
          remain persistant out of scope of the for loop.

Fri Jun 25 10:51:26 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Fixed compilation problems with VC6. To put it short VC6 just
	  cannot handle templates properly. Thanks to gan Deng for reporting
	  the problem.

Thu Jun 24 17:25:36 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/ciao/NodeApplication_Impl.cpp:

          Added ACE_TRY clock to the code.

Thu Jun 24 17:13:20 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Reverted changes to

	  "Fri Jun  4 18:16:47 2004  Jeff Parsons
	  <j.parsons@vanderbilt.edu>"  to get things going on VC6 builds.
