@@ -1,0 +1,3 @@
+BMClosedED      corbaloc:iiop:localhost:10000/NodeManager
+EC              corbaloc:iiop:localhost:20000/NodeManager
+
