@@ -1,0 +1,3 @@
+WindowsXP      corbaloc:iiop:localhost:10000/NodeManager
+RedHatLinux    corbaloc:iiop:localhost:20000/NodeManager
+
